changing content for letter templates as in LTD-1378

--- a/api/letter_templates/templates/letter_templates/ecju_base.html
+++ b/api/letter_templates/templates/letter_templates/ecju_base.html
@@ -26,9 +26,11 @@
       <p>{{ case_officer_name }}</p>
       <p>Export Control Organisation</p>
       <p>
-        3 Whitehall Place<br>
+        Department for International Trade<br>
+        Old Admiralty Building<br>
         London<br>
-        SW1A 2AW
+        SW1A 2BL<br>
+        United Kingdom
       </p>
       <p>
         Tel +44 (0)20 7215 4594<br>
