--- a/api/letter_templates/templates/letter_templates/siel.html
+++ b/api/letter_templates/templates/letter_templates/siel.html
@@ -94,11 +94,11 @@
               <span class="cell__uppercase">
 				  Department for International Trade<br>
 				  Export Control Organisation<br>
-				  3 Whitehall Place<br>
-				  London<br>
-				  SW1A 2AW<br>
-				  United Kingdom
-              </span>
+          Old Admiralty Building<br>
+          London<br>
+          SW1A 2BL<br>
+          United Kingdom
+                </span>
           </span>
         </td>
       </tr>
@@ -445,7 +445,7 @@
         iii. permit these records to be inspected and copied by any person authorised by the Secretary of State or the Commissioners, and
       </div>
       <div class="terms-and-conditions-paragraph">
-          iv. inform the Export Control Joint ("ECJU") when the licence becomes exhausted.
+          iv. inform the Export Control Joint Unit ("ECJU") when the licence becomes exhausted.
       </div>
     </div>
 
@@ -579,7 +579,7 @@
 				  3. This licence may be modified or revoked at any time by the Secretary of State
 			  </div>
 			  <div class="terms-and-conditions-paragraph">
-				  4. This licence is valid when printed only if signed and stamped by an official of the Department for Business, Innovation and Skills.
+				  4. This licence is valid when printed only if signed and stamped by an official of the Department for International Trade.
 			  </div>
 			  <div class="terms-and-conditions-heading">
 				  General Notes
