Update siel pdf to display correct licence reference number

--- a/api/letter_templates/templates/letter_templates/siel.html
+++ b/api/letter_templates/templates/letter_templates/siel.html
@@ -37,7 +37,7 @@
         </td>
         <td class="border-black" colspan="3">
           <span class="cell__heading">2. Licence number</span>
-          <span class="cell__uppercase">{{ case_reference }}</span>
+          <span class="cell__uppercase">{{ licence.reference_code }}</span>
         </td>
         <td class="border-black" colspan="3">
           <span class="cell__heading">3a. Commencement date</span>
@@ -242,7 +242,7 @@
         </td>
         <td class="border-black" colspan="3">
           <span class="cell__heading">2. Licence number</span>
-          <span class="cell__uppercase">{{ case_reference }}</span>
+          <span class="cell__uppercase">{{ licence.reference_code }}</span>
         </td>
         <td class="border-black" colspan="3">
           <span class="cell__heading">3a. Commencement date</span>
@@ -349,7 +349,7 @@
         </td>
         <td class="border-black" colspan="3">
           <span class="cell__heading">2. Licence number</span>
-          <span class="cell__uppercase">{{ case_reference }}</span>
+          <span class="cell__uppercase">{{ licence.reference_code }}</span>
         </td>
         <td class="border-black" colspan="3">
           <span class="cell__heading">3a. Commencement date</span>
@@ -541,7 +541,7 @@
         </td>
         <td class="border-black" colspan="3">
           <span class="cell__heading">2. Licence number</span>
-          <span class="cell__uppercase">{{ case_reference }}</span>
+          <span class="cell__uppercase">{{ licence.reference_code }}</span>
         </td>
         <td class="border-black" colspan="3">
           <span class="cell__heading">3a. Commencement date</span>
