LTD-3098 refusal letter update

--- a/api/letter_templates/templates/letter_templates/ecju_base.html
+++ b/api/letter_templates/templates/letter_templates/ecju_base.html
@@ -29,12 +29,12 @@
         Department for International Trade<br>
         Old Admiralty Building<br>
         London<br>
-        SW1A 2BL<br>
+        SW1A 2DY<br>
         United Kingdom
       </p>
       <p>
-        Tel +44 (0)20 7215 4594<br>
-        Enquiries +44 (0)20 4551 0011
+        Tel +44 (0) 20 7215 4594<br>
+        Enquiries +44 (0) 20 4551 0011
       </p>
       <p>
         www.trade.gov.uk<br>
@@ -44,7 +44,7 @@
   </div>
 
   <div class="border-black padding page-break-after" id="paragraph_content">
-    {{ user_content }}
+    {{ user_content|linebreaksbr}}
   </div>
 
   <h1>Schedule of Entities Assessed</h1>
