--- a/assets/css/ecju.css
+++ b/assets/css/ecju.css
@@ -15,9 +15,9 @@
 .document #recipient-address {
   width: 90mm;
 }
-.document #sender-address {
+/* .document #sender-address {
   margin-left: 10%;
-}
+} */
 .document #references {
   display: inline-block;
 }
