-Updates weasyprint and add lang en-gb to pdf templates. -Adds titles to the PDF templates.

--- a/api/letter_templates/templates/letter_templates/ecju_base.html
+++ b/api/letter_templates/templates/letter_templates/ecju_base.html
@@ -1,6 +1,5 @@
-{% load custom_tags static %}
-
-{{ css|safe }}
+{% load static custom_tags %}
+{% include "letter_templates/base.html" %}
 
 <div class="document">
   <p id="references">
