--- a/api/letter_templates/templates/letter_templates/siel.html
+++ b/api/letter_templates/templates/letter_templates/siel.html
@@ -1,6 +1,5 @@
 {% load static custom_tags %}
-
-{{ css|safe }}
+{% include "letter_templates/base.html" %}
 
 <div class="document">
     <h1>Standard Individual Export Licence</h1>
