--- a/api/letter_templates/templates/letter_templates/application_form.html
+++ b/api/letter_templates/templates/letter_templates/application_form.html
@@ -1,6 +1,5 @@
 {% load custom_tags %}
-
-{{ css|safe }}
+{% include "letter_templates/base.html" %}
 
 <div class="document">
 	<b>OFFICIAL-SENSITIVE</b>
