--- a/api/letter_templates/templates/letter_templates/siel.html
+++ b/api/letter_templates/templates/letter_templates/siel.html
@@ -1,6 +1,7 @@
+{% extends "letter_templates/pdf_generation_base.html" %}
 {% load static custom_tags %}
-{% include "letter_templates/base.html" %}
 
+{% block content %}
 <div class="document">
     <h1>Standard Individual Export Licence</h1>
     <img src="{% static 'images/dit.png' %}">
@@ -620,3 +621,4 @@
       </tr>
     </table>
 </div>
+{% endblock %}
