Move PDF title into templates

--- a/api/letter_templates/templates/letter_templates/nlr.html
+++ b/api/letter_templates/templates/letter_templates/nlr.html
@@ -1,5 +1,7 @@
 {% extends "letter_templates/ecju_base.html" %}
 
+{% block title %}No licence required letter{% endblock %}
+
 {% block table %}
 
 <div id="paragraph_content">
