--- a/api/letter_templates/templates/letter_templates/refusal.html
+++ b/api/letter_templates/templates/letter_templates/refusal.html
@@ -1,5 +1,7 @@
 {% extends "letter_templates/ecju_base.html" %}
 
+{% block title %}Refusal letter{% endblock %}
+
 {% block table %}
   <table>
     <tr>
