--- a/api/letter_templates/templates/letter_templates/siel.html
+++ b/api/letter_templates/templates/letter_templates/siel.html
@@ -1,6 +1,8 @@
 {% extends "letter_templates/pdf_generation_base.html" %}
 {% load static custom_tags %}
 
+{% block title %}Standard individual export licence{% endblock %}
+
 {% block content %}
 <div class="document">
     <h1>Standard Individual Export Licence</h1>
