--- a/api/letter_templates/templates/letter_templates/application_form.html
+++ b/api/letter_templates/templates/letter_templates/application_form.html
@@ -1,6 +1,8 @@
 {% extends "letter_templates/pdf_generation_base.html" %}
 {% load custom_tags %}
 
+{% block title %}Application form{% endblock %}
+
 {% block content %}
 <div class="document">
 	<b>OFFICIAL-SENSITIVE</b>
