Remove additional linebreaks creation as markdown processor will do this

--- a/api/letter_templates/templates/letter_templates/ecju_base.html
+++ b/api/letter_templates/templates/letter_templates/ecju_base.html
@@ -43,9 +43,7 @@
     </div>
   </div>
 
-  <div class="border-black padding page-break-after" id="paragraph_content">
-    {{ user_content|linebreaksbr}}
-  </div>
+  <div class="border-black padding page-break-after" id="paragraph_content">{{ user_content }}</div>
 
   <h1>Schedule of Entities Assessed</h1>
   {% block table %}
