--- a/assets/css/siel.css
+++ b/assets/css/siel.css
@@ -133,6 +133,10 @@ table.print-friendly tr th {
   page-break-inside: avoid;
 }
 
+#paragraph_content p:first-of-type {
+  margin-top: 0;
+}
+
 #paragraph_content_div {
   padding: 0px;
   margin: 0px;
