--- a/api/letter_templates/templates/letter_templates/inform_letter_base.html
+++ b/api/letter_templates/templates/letter_templates/inform_letter_base.html
@@ -3,48 +3,53 @@
 
 {% block content %}
 <div class="document">
-  <p id="references">
-    Our Ref: {{ case_reference }}<br>
-    Your Ref: {{ details.user_reference }}<br>
-  </p>
-  <img src="{% static 'images/dit.png' %}">
+  <div class="header">
+    <div class="header-1">
+        <div>
+            <img src="{% static 'images/dbt.png' %}">
+        </div>
 
-  <div id="addresses">
-    <div id="recipient-address">
-      <p>
-        {{ organisation.name }}<br>
-        {% if organisation.primary_site.address_line_1 %} {{ organisation.primary_site.address_line_1 }}<br> {% endif %}
-        {% if organisation.primary_site.address_line_2 %} {{ organisation.primary_site.address_line_2 }}<br> {% endif %}
-        {{ organisation.primary_site.postcode }}<br>
-        {{ organisation.primary_site.city }}<br>
-        {{ organisation.primary_site.region }}<br>
-        {{ organisation.primary_site.country.name }}
-      </p>
-      <p>Date: {% now "jS F Y" %}</p>
+
+        <div class="addressee">
+            <p>
+              {{ addressee.name }}<br>
+              {{ organisation.name }}<br>
+              {% if organisation.primary_site.address_line_1 %} {{ organisation.primary_site.address_line_1 }}<br> {% endif %}
+              {% if organisation.primary_site.address_line_2 %} {{ organisation.primary_site.address_line_2 }}<br> {% endif %}
+              {{ organisation.primary_site.postcode }}<br>
+              {{ organisation.primary_site.city }}<br>
+              {{ organisation.primary_site.region }}<br>
+              {{ organisation.primary_site.country.name }}
+            </p>
+            <p>
+              {{addressee.email}}
+            </p>
+            <p>
+              {% now "jS F Y" %}
+            </p>
+        </div>
     </div>
-    <div id="sender-address">
-      <p>{{ case_officer_name }}</p>
-      <p>Export Control Organisation</p>
-      <p>
-        Department for International Trade<br>
-        Old Admiralty Building<br>
-        London<br>
-        SW1A 2DY<br>
-        United Kingdom
-      </p>
-      <p>
-        Tel +44 (0) 20 7215 4594<br>
-        Enquiries +44 (0) 20 4551 0011
-      </p>
-      <p>
-        www.trade.gov.uk<br>
-        exportcontrol.help@trade.gov.uk
-      </p>
+    <div class="header-2 header-subtext">
+        <p>
+            Export Control Joint Unit<br/>
+            Department for International Trade<br/>
+            Old Admiralty Building<br/>
+            London<br/>
+            SW1A 2DY<br/>
+        </p>
+    </div>
+    <div class="header-3 header-subtext">
+        <p>
+            Export control help: +44 (0)20 7215 4594<br/>
+            Complaints: +44 (0)20 4551 0011<br/>
+            https://www.gov.uk/dbt<br/>
+            exportcontrol.help@businessandtrade.gov.uk<br/>
+        </p>
     </div>
   </div>
 
   <div class="border-black padding page-break-after" id="paragraph_content">
-    {{ user_content|linebreaksbr}}
+    {{ user_content}}
   </div>
   {% block table %}
 
