--- a/api/letter_templates/templates/letter_templates/pdf_generation_base.html
+++ b/api/letter_templates/templates/letter_templates/pdf_generation_base.html
@@ -3,6 +3,7 @@
         {{ css|safe }}
         <meta charset="utf-8">
         <title>{% block title %}{% endblock %} {{ case_reference }}</title>
+        {% block css %}{% endblock %}
     </head>
 
     <body>
