--- a/api/letter_templates/templates/letter_templates/inform_letter.html
+++ b/api/letter_templates/templates/letter_templates/inform_letter.html
@@ -1,6 +1,6 @@
-{% extends "letter_templates/inform_letter_base.html" %}
+{% extends "letter_templates/dbt_letter_base.html" %}
 
-{% block table %}
+{% block body %}
   <table>
   </table>
 {% endblock %}
