--- a/assets/css/inform_letter.css
+++ b/assets/css/inform_letter.css
@@ -20,6 +20,7 @@
   }
   .document #references {
     display: inline-block;
+    margin-bottom: 20px;
   }
   .document table {
     border-collapse: collapse;
