Use approved licence goods quantity and value to generate Licence document
LU have an option to edit quantity, value when finalising the Case to issue
a licence. These are updated in 'GoodOnLicence` objects for that licence.
However when licence document is generated we are pulling quantity/value
from `GoodOnApplication` which are values they applied for.

Fix this by using goods on licence.

Note that the message we sent to HMRC uses `GoodOnLicence` so it will be with
correct quantity values.

--- a/api/letter_templates/templates/letter_templates/siel.html
+++ b/api/letter_templates/templates/letter_templates/siel.html
@@ -313,8 +313,8 @@
                         {{ clc }}{% if not forloop.last %},{% endif %}
                     {% endfor %}
                 </td>
-                <td class="border-black" colspan="2">{{ good_item.applied_for_value }}</td>
-                <td class="border-black" colspan="2">{{ good_item.applied_for_quantity }}</td>
+                <td class="border-black" colspan="2">{{ good_item.value }}</td>
+                <td class="border-black" colspan="2">{{ good_item.quantity }}</td>
             </tr>
           {% endwith %}
         {% endfor %}
