Update SIEL licence footer information about control list entries

--- a/api/letter_templates/templates/letter_templates/siel.html
+++ b/api/letter_templates/templates/letter_templates/siel.html
@@ -606,19 +606,19 @@
 				  the Customs and Excise Management Act 1979, or the legislation under which this licence was issued.
 			  </div>
 			  <div class="terms-and-conditions-paragraph">
-				  <strong>Understanding the Control List Number (Rating Classification)</strong>
+				  <strong>Understanding the control list entry</strong>
 			  </div>
 			  <div class="terms-and-conditions-paragraph">
-				  Control List No.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Relevant Control List<br>
-				  ML*&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UK Military List
+				  The control list entry is part of the UK Strategic Export Control List.
 			  </div>
 			  <div class="terms-and-conditions-paragraph">
-          For further details on the Control List number (rating), read the UK Strategic Export Control Lists guidance on GOV.UK:
+          For further details on the control list entry and how you can use this information, read the guidance on GOV.UK:
 			  </div>
-
-        <a href="https://www.gov.uk/guidance/uk-strategic-export-control-lists-the-consolidated-list-of-strategic-military-and-dual-use-items">
-          https://www.gov.uk/guidance/uk-strategic-export-control-lists-the-consolidated-list-of-strategic-military-and-dual-use-items
-        </a>
+        <div class="terms-and-conditions-paragraph">
+          <a href="https://www.gov.uk/government/publications/uk-strategic-export-control-lists-the-consolidated-list-of-strategic-military-and-dual-use-items-that-require-export-authorisation">
+            https://www.gov.uk/government/publications/uk-strategic-export-control-lists-the-consolidated-list-of-strategic-military-and-dual-use-items-that-require-export-authorisation
+          </a>
+        </div>
         </td>
       </tr>
     </table>
